Implemented the icons for the cards and the menu#

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+
+    <!-- FONT AWESOME ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+    <!-- EXTERNAL CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- EXTERNAL JS -->
     <script src="scriptsjs.js" defer></script>
 </head>
-
 <body>
 
     <!-- SIDEBAR -->
@@ -18,24 +24,28 @@
 
             <div class="menu-title">MAIN</div>
             <ul class="menu" id="db_manu">
-                <li><a href="#" data-target="dashboard">Dashboard</a></li>
+                <li>
+                    <a href="#" data-target="dashboard">
+                        <i class="fa-solid fa-chart-line"></i> Dashboard
+                    </a>
+                </li>
             </ul>
 
             <div class="divider"></div>
 
             <div class="menu-title">MANAGEMENT</div>
             <ul class="menu">
-                <li><a href="#" data-target="users">Users</a></li>
-                <li><a href="#" data-target="orders">Orders</a></li>
-                <li><a href="#" data-target="requisitions">Requisitions</a></li>
+                <li><a href="#" data-target="users"><i class="fa-solid fa-users"></i> Users</a></li>
+                <li><a href="#" data-target="orders"><i class="fa-solid fa-box-open"></i> Orders</a></li>
+                <li><a href="#" data-target="requisitions"><i class="fa-solid fa-file-signature"></i> Requisitions</a></li>
             </ul>
         </div>
 
         <div class="account-section">
             <div class="menu-title">ACCOUNT</div>
             <ul class="menu">
-                <li><a href="#" data-target="settings">Settings</a></li>
-                <li><a href="#" data-target="logout">Logout</a></li>
+                <li><a href="#" data-target="settings"><i class="fa-solid fa-gear"></i> Settings</a></li>
+                <li><a href="#" data-target="logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
             </ul>
         </div>
 
@@ -46,17 +56,63 @@
 
         <!-- DASHBOARD SECTION -->
         <div id="dashboard" class="action-container">
+
             <!-- TOP CARDS -->
-            <div class="cards">
-                <div class="card"><h3>Total Users</h3><p>120</p></div>
-                <div class="card"><h3>Total Orders</h3><p>243</p></div>
-                <div class="card"><h3>Pending Requests</h3><p>19</p></div>
-                <div class="card"><h3>System Status</h3><p>Active</p></div>
+        <div class="cards">
+
+            <div class="card">
+                <div class="card-left">
+                    <h3>Total Submitted Files</h3>
+                    <p>23619</p>
+                </div>
+                <div class="card-right">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-database"></i>
+                    </div>
+                </div>
             </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <h3>Total Active Institutions</h3>
+                    <p>37</p>
+                </div>
+                <div class="card-right">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <h3>Total Activated Users</h3>
+                    <p>98</p>
+                </div>
+                <div class="card-right">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-left">
+                    <h3>Total Success Rate</h3>
+                    <p>99.9%</p>
+                </div>
+                <div class="card-right">
+                    <div class="icon-circle">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
 
             <!-- GRID -->
             <div class="grid-layout">
-                <!-- LATEST ACTIVITY -->
                 <div class="box">
                     <h2>Latest Activity</h2>
                     <ul class="activity-list">
@@ -68,7 +124,6 @@
                     </ul>
                 </div>
 
-                <!-- SUBMISSIONS TABLE -->
                 <div class="box">
                     <h2>Submissions By Users</h2>
                     <table>
@@ -92,11 +147,7 @@
                 <table class="full-table">
                     <thead>
                         <tr>
-                            <th>User</th>
-                            <th>Role</th>
-                            <th>Status</th>
-                            <th>Date Created</th>
-                            <th>Actions</th>
+                            <th>User</th><th>Role</th><th>Status</th><th>Date Created</th><th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -105,46 +156,33 @@
                             <td>Admin</td>
                             <td class="success">Active</td>
                             <td>2025-01-12</td>
-                            <td><button class="btn">Edit</button></td>
+                            <td><button class="btn"><i class="fa-solid fa-pen-to-square"></i> Edit</button></td>
                         </tr>
                         <tr>
                             <td>Doreen Achen</td>
                             <td>User</td>
                             <td class="danger">Inactive</td>
                             <td>2025-02-03</td>
-                            <td><button class="btn">Edit</button></td>
+                            <td><button class="btn"><i class="fa-solid fa-pen-to-square"></i> Edit</button></td>
                         </tr>
                         <tr>
                             <td>Leala Naiga</td>
                             <td>User</td>
                             <td class="success">Active</td>
                             <td>2025-01-05</td>
-                            <td><button class="btn">Edit</button></td>
+                            <td><button class="btn"><i class="fa-solid fa-pen-to-square"></i> Edit</button></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
+
         </div>
 
-        <!-- USERS SECTION (initially hidden) -->
-        <div id="users" class="action-container" style="display:none;">
-            <!-- Users content will be dynamically filled via JS -->
-        </div>
-
-        <!-- ORDERS SECTION (initially hidden) -->
-        <div id="orders" class="action-container" style="display:none;">
-            <!-- Orders content will be dynamically filled via JS -->
-        </div>
-
-        <!-- REQUISITIONS SECTION (initially hidden) -->
-        <div id="requisitions" class="action-container" style="display:none;">
-            <!-- Requisitions content will be dynamically filled via JS -->
-        </div>
-
-        <!-- SETTINGS SECTION (initially hidden) -->
-        <div id="settings" class="action-container" style="display:none;">
-            <!-- Settings content -->
-        </div>
+        <!-- OTHER SECTIONS -->
+        <div id="users" class="action-container" style="display:none;"></div>
+        <div id="orders" class="action-container" style="display:none;"></div>
+        <div id="requisitions" class="action-container" style="display:none;"></div>
+        <div id="settings" class="action-container" style="display:none;"></div>
 
     </main>
 
