Restructured the Admin dashbord

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <aside class="sidebar">
 
         <div class="top-menu">
-            <div class="logo">FarmerApp</div>
+            <div class="logo">ISI</div>
 
             <div class="menu-title">MAIN</div>
             <ul class="menu" id="db_manu">
@@ -35,15 +35,17 @@
 
             <div class="menu-title">MANAGEMENT</div>
             <ul class="menu">
-                <li><a href="#" data-target="users"><i class="fa-solid fa-users"></i> Farmers</a></li>
-                <li><a href="#" data-target="orders"><i class="fa-solid fa-box-open"></i> Product Orders</a></li>
-                <li><a href="#" data-target="requisitions"><i class="fa-solid fa-file-signature"></i> Requisitions</a></li>
+                <li><a href="#" data-target="accounts"><i class="fa-solid fa-wallet"></i> Accounts</a></li>
+                <li><a href="#" data-target="users"><i class="fa-solid fa-users"></i> Users</a></li>
+                <li><a href="#" data-target="projects"><i class="fa-solid fa-diagram-project"></i> Projects</a></li>
+                <li><a href="#" data-target="security"><i class="fa-solid fa-shield-halved"></i> Security</a></li>
             </ul>
         </div>
 
         <div class="account-section">
             <div class="menu-title">ACCOUNT</div>
             <ul class="menu">
+                <li><a href="#" data-target="profile"><i class="fa-solid fa-user"></i> Profile</a></li>
                 <li><a href="#" data-target="settings"><i class="fa-solid fa-gear"></i> Settings</a></li>
                 <li><a href="#" data-target="logout"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
             </ul>
@@ -98,7 +100,7 @@
 
                 <div class="card">
                     <div class="card-left">
-                        <h3>Transaction Success Rate</h3>
+                        <h3>Notifications</h3>
                         <p>99.9%</p>
                     </div>
                     <div class="card-right">
@@ -124,11 +126,11 @@
                 </div>
 
                 <div class="box">
-                    <h2>Products Listed by Farmers</h2>
+                    <h2>shares on sales</h2>
                     <table>
                         <thead>
                             <tr>
-                                <th>Farmer</th><th>Total</th><th>Sold</th><th>Unsold</th>
+                                <th>Name</th><th>Total</th><th>Sold</th><th>Unsold</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -147,7 +149,7 @@
         <table class="full-table">
             <thead>
                 <tr>
-                    <th>Farmer</th>
+                    <th>name</th>
                     <th>Product</th>
                     <th>Quantity</th>
                     <th>Amount (UGX)</th>
@@ -183,7 +185,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Leala Naiga</td>
+                    <td>john Bosco</td>
                     <td>Fertilizer</td>
                     <td>10 bags</td>
                     <td>500,000</td>
